Refactor phone number formatting and enhance Valitive event synchronization; remove debug statements and improve error handling

--- a/force-app/main/default/classes/ContactValitiveEventMapping.cls
+++ b/force-app/main/default/classes/ContactValitiveEventMapping.cls
@@ -107,7 +107,7 @@ public class ContactValitiveEventMapping {
 
     public static String formatPhoneNumber(Valitive_Event__c event) {
         String telNumber = event.Telephone_Number__c;
-        String countryCode = event.Country_Code__c;
+        String countryCode = event.Country_Code__c.replaceAll('[^0-9 ]', '');
         string regexReplace = String.format('^{0}', new List<Object>{countryCode});
         String formatedNumber = telNumber.replaceAll(regexReplace, '0');
         return formatedNumber;
